# smallChatRoom

./: .gitignore  CMakeLists.txt  Makefile  README.md  client_v  main  main.cpp  server_v
Client/: client  main.cpp
Server/: PthreadPool.cpp  PthreadPool.h  SocketEpoll.cpp  SocketEpoll.h  TaskQueue.cpp  TaskQueue.h  communicationData.cpp  communicationData.h  main.cpp  server
Utils/: Message.cpp  Message.h  MessageQueue.cpp  MessageQueue.h  comData.h
